--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sinm/monaco-plantuml": "^0.5.6",
+		"@tauri-apps/api": "^1.5.3",
+		"monaco-editor": "^0.46.0",
+		"nanoid": "^5.0.5",
+		"svelte-codemirror-editor": "^1.2.0",
+		"svelte-pan-zoom": "^0.0.11",
+		"svelte-splitpanes": "^0.8.0"
+	}
 }
