--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"tauri": "tauri"
+		"tauri": "tauri",
+		"tauri-debug": "tauri build -- --debug"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tauri-apps/cli": "^1.5.9",
+		"@tauri-apps/cli": "^1.6.1",
 		"@types/eslint": "8.56.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
@@ -36,12 +37,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@codemirror/legacy-modes": "^6.4.1",
 		"@sinm/monaco-plantuml": "^0.5.6",
-		"@tauri-apps/api": "^1.5.3",
+		"@tauri-apps/api": "^1.6.0",
 		"monaco-editor": "^0.46.0",
 		"nanoid": "^5.0.5",
 		"svelte-codemirror-editor": "^1.2.0",
 		"svelte-pan-zoom": "^0.0.11",
-		"svelte-splitpanes": "^0.8.0"
+		"svelte-splitpanes": "^0.8.0",
+		"tauri-plugin-clipboard-api": "^1.1.4"
 	}
 }
