--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,8 +17,9 @@ tauri-build = { version = "1.5.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.4", features = [ "dialog-open", "shell-all", "clipboard-read-text", "clipboard-write-text", "fs-all", "path-all", "protocol-all"] }
+tauri = { version = "1.5.4", features = [ "dialog-all", "os-all", "shell-all", "clipboard-read-text", "clipboard-write-text", "fs-all", "path-all", "protocol-all"] }
 tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-clipboard = "1.x"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
